--- a/ezyzip/FootballAnalysis/PremierL_Database_Connectivity.ipynb
+++ b/ezyzip/FootballAnalysis/PremierL_Database_Connectivity.ipynb
@@ -113,6 +113,7 @@
     "    for node in nodes:\n",
     "        if type==\"Teams\":\n",
     "            prem_teams_nodes.append(neo.Node(type,name=node))\n",
+    "            db.create(neo.Node(\"stadium\",name=\"SD_\"+node))\n",
     "        elif type==\"PremierLeague\":\n",
     "            PremierLeague_Nodes.append(neo.Node(type,name=node))\n",
     "    if type==\"Teams\":\n",
@@ -210,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.6rc1"
   },
   "orig_nbformat": 4
  },
