--- a/ezyzip/FootballAnalysis/PremierL_stadium.ipynb
+++ b/ezyzip/FootballAnalysis/PremierL_stadium.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "from urllib.error import HTTPError\n",
     "from urllib.error import URLError\n",
     "import requests\n",
+    "import re\n",
     "import py2neo as neo\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -24,7 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db=neo.Graph(\"neo4j+s://52d54f1d.databases.neo4j.io\",\n",
+    "    auth=(\"neo4j\",\"cUQmozgEst1IHWWMmbpPgPiRExkAYWk-qSZdKYcALwA\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +130,93 @@
     "Data_14_15=get_data(\"2014-2015\")\n",
     "Data_13_14=get_data(\"2013-2014\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teams=list( set((teams_20_21)+\n",
+    " (teams_19_20)+\n",
+    " (teams_18_19)+\n",
+    " (teams_17_18)+\n",
+    " (teams_16_17)+\n",
+    " (teams_15_16)+\n",
+    " (teams_14_15)+\n",
+    " (teams_13_14) ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def create_node(nodes,type):\n",
+    "    for node in nodes:\n",
+    "        db.create(neo.Node(type,name=node))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_node(teams,\"stadium\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_matcher = neo.NodeMatcher(db)\n",
+    "nodes_stadium=node_matcher.match(\"stadium\")\n",
+    "nodes_stadium=list(nodes_stadium)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_data(team_name,datas,year):\n",
+    "    for node in nodes_stadium:\n",
+    "        if node[\"name\"] in team_name:\n",
+    "            i=team_name.index(node[\"name\"])\n",
+    "            node[year+\"-sum/average\"]=datas[i*2]+\" / \"+datas[i*2+1]\n",
+    "            db.push(node)\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update_data(teams_20_21,Data_20_21,\"20/21\")\n",
+    "update_data(teams_19_20,Data_19_20,\"19/20\")\n",
+    "update_data(teams_18_19,Data_18_19,\"18/19\")\n",
+    "update_data(teams_17_18,Data_17_18,\"17/18\")\n",
+    "update_data(teams_16_17,Data_16_17,\"16/17\")\n",
+    "update_data(teams_15_16,Data_15_16,\"15/17\")\n",
+    "update_data(teams_14_15,Data_14_15,\"14/15\")\n",
+    "update_data(teams_13_14,Data_13_14,\"13/14\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -140,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6rc1"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
