--- a/ezyzip/FootballAnalysis/PremierL_stadium.ipynb
+++ b/ezyzip/FootballAnalysis/PremierL_stadium.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,10 +213,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['1.006.668 / 52.983',\n",
+       "  '768.297 / 40.437',\n",
+       "  '971.297 / 51.121',\n",
+       "  '1.108.375 / 58.336',\n",
+       "  None,\n",
+       "  '578.085 / 30.426',\n",
+       "  '736.815 / 38.780',\n",
+       "  '463.051 / 24.371',\n",
+       "  '483.644 / 25.455',\n",
+       "  None,\n",
+       "  '1.030.111 / 54.216',\n",
+       "  '1.415.471 / 74.498',\n",
+       "  '390.148 / 20.534',\n",
+       "  '1.028.477 / 54.130',\n",
+       "  '605.161 / 31.851',\n",
+       "  None,\n",
+       "  '589.572 / 31.030',\n",
+       "  '1.138.072 / 59.899',\n",
+       "  '572.640 / 30.139',\n",
+       "  None],\n",
+       " ['Liverpool FC',\n",
+       "  'Chelsea FC',\n",
+       "  'Newcastle United',\n",
+       "  'West Ham United',\n",
+       "  'Sheffield United',\n",
+       "  'Brighton & Hove Albion',\n",
+       "  'Everton FC',\n",
+       "  'Fulham FC',\n",
+       "  'Crystal Palace',\n",
+       "  'Aston Villa',\n",
+       "  'Tottenham Hotspur',\n",
+       "  'Manchester United',\n",
+       "  'Burnley FC',\n",
+       "  'Manchester City',\n",
+       "  'Leicester City',\n",
+       "  'West Bromwich Albion',\n",
+       "  'Wolverhampton Wanderers',\n",
+       "  'Arsenal FC',\n",
+       "  'Southampton FC',\n",
+       "  'Leeds United'])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_20_21=[]\n",
+    "teams_20_21=[]\n",
+    "for node in nodes_stadium:\n",
+    "    if node[\"20/21-sum/average\"] is not None:\n",
+    "        data_20_21.append(node[\"18/19-sum/average\"])\n",
+    "        teams_20_21.append(node[\"name\"])\n",
+    "\n",
+    "data_20_21,teams_20_21          "
+   ]
   }
  ],
  "metadata": {
