--- a/ezyzip/FootballAnalysis/champions league_Data.ipynb
+++ b/ezyzip/FootballAnalysis/champions league_Data.ipynb
@@ -305,16 +305,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db=neo.Graph(\"bolt://localhost:7687\",\n",
-    "    auth=(\"neo4j\",\"123\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 275,
    "metadata": {},
    "outputs": [],
@@ -324,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,6 +404,44 @@
     "            elif node[\"name\"]==M.split(\"# #\")[2]:\n",
     "                A_T=node\n",
     "        db.create(R_match(H_T,A_T,**proper))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in range(0,len(nodes_Cleagues)):\n",
+    "    for M in range(0,len(match[n])):\n",
+    "        if M==0:\n",
+    "            nodes_Cleagues[n][\"champion\"]=match[n][M].split(\"# #\")[3]\n",
+    "            db.push(nodes_Cleagues[n])\n",
+    "        elif M>0 and M<=4:\n",
+    "            nodes_Cleagues[n][\"Semi-finals\"]=nodes_Cleagues[n][\"Semi-finals\"]+\"-\"+match[n][M].split(\"# #\")[0]\n",
+    "            db.push(nodes_Cleagues[n]) \n",
+    "        elif M>4 and M<=12:\n",
+    "            nodes_Cleagues[n][\"Quarter-finals\"]=nodes_Cleagues[n][\"Quarter-finals\"]+\"-\"+match[n][M].split(\"# #\")[0]\n",
+    "            db.push(nodes_Cleagues[n])\n",
+    "        elif M>12 and M<=28:\n",
+    "            nodes_Cleagues[n][\"Round of 16\"]=nodes_Cleagues[n][\"Round of 16\"]+\"-\"+match[n][M].split(\"# #\")[0]\n",
+    "            db.push(nodes_Cleagues[n])\n",
+    "            \n",
+    "nodes_Cleagues[5][\"champion\"]=\"Real Madrid\"\n",
+    "db.push(nodes_Cleagues[5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in range(0,len(nodes_Cleagues)):\n",
+    "    nodes_Cleagues[n][\"Semi-finals\"]=\"\"\n",
+    "    nodes_Cleagues[n][\"Quarter-finals\"]=\"\"\n",
+    "    nodes_Cleagues[n][\"Round of 16\"]=\"\"\n",
+    "    db.push(nodes_Cleagues[n])"
    ]
   },
   {
